# ZIMply

./: flake.nix  main.py  pyproject.toml  setup.py  zimply-service.nix
zimply/: template.html  zimply.py
