[project]
name = "zimply"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "falcon>=4.0.2",
    "gevent>=24.11.1",
    "mako>=1.3.10",
    "zstandard>=0.23.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
]
